[project]
name = "brave-date-server"
version = "0.1.0"
description = "A fully async based backend for Brave Date built using FastAPI, MongoDB, Pydantic, SQLAlchemy, Redis Pub/Sub, and Deta."
authors = ["wiseaidev <business@wiseai.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brave-date/brave-date-server"
homepage = "https://github.com/brave-date/brave-date-server"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["python", "fastapi", "MongoDB", "SQLAlchemy", "Deta", "tinder clone", "Brave Date"]
packages = [
    { include = "app" },
    { include = "LICENSE" },
    { include = "README.md" },
]
requires-python = ">=3.12.0"
dependencies = [
  # Passlib with bcrypt extra
  "passlib[bcrypt] >=1.7.4,<2",
  "fastapi >=0.87.0,<1",
  "pyjwt >=2.6.0,<3",
  # Uvicorn with standard extra
  "uvicorn[standard] >=0.20.0,<1",
  # Pydantic with email extra
  "pydantic[email] >=1.10.2,<2",
  "python-multipart >=0.0.5,<1",
  "odmantic >=0.9.1,<1",
  "dnspython >=2.2.1,<3",
  "pinatapy-vourhey == 0.1.8",
  # pin bcrypt https://github.com/pyca/bcrypt/issues/684
  "bcrypt == 4.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.black]
line-length = 79
